# python-monorepo

./: .editorconfig  .prettierrc.json  README.md  ruff.toml
.github/workflows/: release-shared.yml
account/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
account/alembic/: README.md  env.py  script.py.mako
account/alembic/versions/: 20251230_01_create_accounts.py  20251230_02_create_outbox.py
account/sql/: create_table.sql
account/src/account/: __init__.py  container.py  main.py
account/src/account/adapter/: __init__.py  endpoint.py  in_memory_account_repository.py
account/src/account/api/: __init__.py  account_api.py
account/src/account/domain/: __init__.py  account.py  email.py
account/src/account/port/: __init__.py  account_repository.py
account/src/account/service/: __init__.py  account_service.py
account/src/account/tests/: test_account.py  test_account_id.py
authn/: README.md  docker-compose.yml  pyproject.toml
authn/src/authn/: config.py  containers.py
authn/src/authn/application/: repositories.py
authn/src/authn/application/use_cases/: login.py  register_user.py
authn/src/authn/domain/: models.py
authn/src/authn/infrastructure/database/: repositories.py
authn/src/authn/infrastructure/security/: password.py
authn/src/authn/presentation/: dependencies.py  schemas.py
cdc/: README.md
cdc/connectors/: account-postgres-connector.json.tpl  authn-postgres-connector.json.tpl
cdc/docker/: docker-compose.yml
cdc/images/debezium-mysql-connect/: Dockerfile
cdc/images/debezium-postgres-connect/: Dockerfile
shared/: .editorconfig  README.md  pyproject.toml
shared/src/shared/: __init__.py
shared/src/shared/model/: __init__.py  account_id.py
shared/tests/: test_account_id.py
