[project]
name = "account"
version = "0.0.0"
description = "Offers domain-specific operations and models for the Account context."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Kentaro Kiuchi", email = "kentaro.kiuchi@outlook.jp" }]
dependencies = [
  "dependency-injector>=4.48.2",
  "fastapi>=0.121.1",
  "psycopg[binary]>=3.3.2",
  "pydantic[email]>=2.12.4",
  "sqlalchemy>=2.0.45",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.14.10"]
migration = ["alembic>=1.17.2"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["INP001", "S101"]
