[project]
name = "authn"
version = "0.0.0"
description = "Offers domain-specific operations and models for the Authentication context."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Kentaro Kiuchi", email = "kentaro.kiuchi@outlook.jp" }]
dependencies = [
  "alembic>=1.17.2",
  "dependency-injector>=4.48.2",
  "fastapi>=0.121.1",
  "psycopg[binary]>=3.3.2",
  "pydantic[email]>=2.12.4",
  "sqlalchemy>=2.0.45",
  "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "ruff>=0.14.3"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["INP001", "S101"]
