[project]
name = "shared"
version = "0.0.0"
description = "Provides shared definitions, abstractions, and domain-agnostic utilities to ensure consistent and type-safe communication across multiple domains."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Kentaro Kiuchi", email = "kentaro.kiuchi@outlook.jp" }]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "ruff>=0.14.3"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend = "../ruff.toml"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["INP001", "S101"]
